# server-launcher

./: .gitignore  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: release-build.yml  test-build.yml
app/assets/css/: main.css
app/components/: AccessTab.vue  AppHeader.vue  BackupTab.vue  ConsoleTab.vue  EulaDialog.vue  NewProfileModal.vue  OnboardingPage.vue  PlayerActionDialog.vue  PlayersTab.vue  PluginsTab.vue  ProfileDeleteDialog.vue  ProfileSidebar.vue  SettingsTab.vue  TabNav.vue  UpdateNotice.vue
app/composables/: useLauncherState.ts
app/pages/: index.vue
app/types/: launcher.ts
app/utils/: consoleLog.ts  launcherClient.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  config.rs  java.rs  lib.rs  main.rs  models.rs  plugins.rs  runtime.rs  settings.rs  system.rs  updater.rs  versions.rs
