[package]
name = "minehub-server-launcher"
version = "0.1.0"
description = "Minecraft server launcher"
authors = ["Codex"]
edition = "2021"

[package.metadata.tauri-winres]
OriginalFilename = "minehub-server-launcher.exe"

[lib]
name = "mc_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
igd = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
sysinfo = "0.30"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
